app/assets/stylesheets/application.scss
/* ... */
*{
	box-sizing:border-box;
	font-family: $font;
}
.background-img{
	position:fixed;
	z-index:1;
}
@media (max-width:50000px) and (min-width:1200px){
	.devise{
		padding-bottom:2rem;
		background-color:$white;
		width:40%;
		border-top:3px solid $red;
		text-align:center;
		margin:3rem auto;
		.devise-title{
			padding-top:1rem;
			padding-bottom:2rem;
			background-color: $orange;
		}
	}
	.assignment-list, .topic-list, .announcement-list{
		display:inline-block;
		height:400px;
		width:30%;
		float:left;
		margin:3rem 2rem;
		background-color: $white;
		.index-titles{
			border-top: 3px solid #d0d0d0;
			text-align:left;
			font-size:2rem;
			border-bottom: 1px solid #d0d0d0;
			padding-left:1.5rem;
			padding-top:1rem;
			padding-bottom:1rem;
		}
	}
	.announcement-show{
		width:90%;
		height:150px;
		border-radius: 5px;
		margin: 10px auto;
		text-align:left;
		background-color:$white;
		.announcement-title{
			width:100%;
			background-color:$orange;
			height:50px;
			font-size:2.5rem;
			font-weight:900;
			padding:1rem;
		}
		.announcement-description{
			background-color: $white;
			font-weight:100;
			padding:1rem;
			font-size:2rem;
		}
		.announcement-time{
			background-color: $white;
			font-weight:100;
			padding:1rem;
			font-size:1rem;

		}
		
	}
	.announcement{
		background-color:#f3f6fb;
		border-top:3px solid $orange;
		color: $black;
		max-height:100px;
		width:90%;
		margin:1rem auto;

		font-size:1.8rem;
	}
	.assignment{
		float:left;
		display:inline-block;
		color: $black;
		background-color: $grey;
		width:50%;
		height:85px;
		font-size:1.5rem;
		border:none;
		
		
		.assignment-title{
			padding:0.5rem;
			font-size:1.3rem;
		}
		.assignment-description{
			padding:0.5rem;
			font-size:1rem;
		}
		.assignment-duedate{
			padding:0.5rem;
		}
		&:hover{

		}
		
	}
	.topic-show-container{
		background-color:$grey;
		margin:0 auto;
		width:90%;
		height:580px;
		margin-top:20px;
		.topic-show-lesson-container{
			width:43%;
			height:400px;
			background-color: $white;
			display:inline-block;
			float:left;
			margin-left:50px;
			border-top: 3px solid #d0d0d0;
			.topic-show-lesson-container-title{
				font-size:2.5rem;
				background-color:$white;
				border-bottom: 1px solid #d0d0d0;
				text-align:left;
				height:5rem;
				padding:1rem;
			}
		}
		.topic-show-assignment-container{
			border-top: 3px solid #d0d0d0;
			width:43%;
			height:400px;
			background-color: $white;
			display:inline-block;
			float:right;
			margin-right:50px;
			.topic-show-assignment-container-title{
				font-size:2.5rem;
				background-color:$white;
				border-bottom: 1px solid #d0d0d0;
				text-align:left;
				height:5rem;
				padding:1rem;
			}
		}
		
	}
}
@media (max-width:1199px) and (min-width:1000px){
	.devise{
		padding-bottom:2rem;
		background-color:$white;
		width:50%;
		border-top:3px solid $red;
		text-align:center;
		margin:3rem auto;
		.devise-title{
			padding-top:1rem;
			padding-bottom:2rem;
			background-color: $orange;
		}
	}
	.assignment-list, .topic-list, .announcement-list{
		height:400px;
		width:80%;
		margin:3rem auto;
		background-color: $white;
		.index-titles{
			border-top: 3px solid #d0d0d0;
			text-align:left;
			font-size:2rem;
			border-bottom: 1px solid #d0d0d0;
			padding-left:1.5rem;
			padding-top:1rem;
			padding-bottom:1rem;
		}
	}
	.announcement-show{
		width:90%;
		height:150px;
		border-radius: 5px;
		margin: 10px auto;
		text-align:left;
		background-color:$white;
		.announcement-title{
			width:100%;
			background-color:$orange;
			height:50px;
			font-size:2.5rem;
			font-weight:900;
			padding:1rem;
		}
		.announcement-description{
			background-color: $white;
			font-weight:100;
			padding:1rem;
			font-size:2rem;
		}
		.announcement-time{
			background-color: $white;
			font-weight:100;
			padding:1rem;
			font-size:1rem;

		}
		
	}
	.announcement{
		background-color:#f3f6fb;
		border-top:3px solid $orange;
		color: $black;
		max-height:100px;
		width:90%;
		margin:1rem auto;
		font-size:1.8rem;
	}
	.assignment{
		float:left;
		display:inline-block;
		color: $black;
		background-color: $grey;
		width:44%;
		height:85px;
		font-size:1.5rem;
		border:none;
		border-radius:0.3rem;
		margin:1rem 3%;
		.assignment-title{
			margin-left:0.5rem;
			font-size:1.3rem;
		}
		.assignment-description{
			margin-left:0.5rem;
			font-size:1rem;
		}
		.assignment-duedate{
			margin-left:0.5rem;
		}
		
	}
	.topic-show-container{
		background-color:$grey;
		margin:0 auto;
		width:90%;
		height:580px;
		margin-top:20px;
		.topic-show-lesson-container{
			width:43%;
			height:400px;
			background-color: $white;
			display:inline-block;
			float:left;
			margin-left:50px;
			.topic-show-lesson-container-title{
				font-size:2.5rem;
				background-color:$orange;
				text-align:center;
				height:5rem;
				padding:1rem;
			}
		}
		.topic-show-assignment-container{
			width:43%;
			height:400px;
			background-color: $white;
			display:inline-block;
			float:right;
			margin-right:50px;
			.topic-show-assignment-container-title{
				font-size:2.5rem;
				background-color:$green;
				text-align:center;
				height:5rem;
				padding:1rem;
			}
		}
		
	}
	
}
/* ... */

